fix: Shift combobox evaluation predictors #81

--- a/src/styles/material.scss
+++ b/src/styles/material.scss
@@ -250,6 +250,7 @@ mat-checkbox .mdc-form-field label {
   padding: 0.6rem 0;
   min-width: 100%;
   text-align: left;
+  display: contents !important;
 }
 
 .mat-mdc-slider {
